' @compare_tag Process-ClassDiagram v0.1
@startuml
title ObjectManager Process Class Diagram

namespace fast::rf {
  namespace DiagnosticDefinition {
    enum DiagnosticType
  }
  namespace messages {
    namespace InfrastructureMsgs {
      class DiagnosticMsg <<(M,#FFFF00)>>
      class ReadyToArmStatusMsg <<(M,#FFFF00)>>
    }
  }
  namespace core::Infrastructure {
    class DiagnosticManager
  }
  interface IProcess
  namespace PerceptionSystem {
    namespace ObjectTrackerSubsystem {
      package ObjectManager #LightYellow;line:blue {

        interface IObjectManagerProcess  {
          +{abstract} bool init()
        }
        IObjectManagerProcess -up-|> IProcess
        abstract BaseObjectManagerProcess {
          +DiagnosticMsg[] getDiagnostics()
          +bool updateDiagnostic(DiagnosticType type, Level level, DiagnosticMessage message, string description)
          +ReadyToArmStatusMsg get_ready_to_arm()
          #bool update(double current_time_sec)
          #string pretty()
          #DiagnosticManager m_diagnosticManager
          #ReadyToArmStatusMsg ready_to_arm

        }
        BaseObjectManagerProcess .up.|> IObjectManagerProcess
        BaseObjectManagerProcess --> DiagnosticManager: <<use>>
        class BasicObjectManagerProcessConfig {
          +bool is_ok()
          +string pretty()
        }
        class BasicObjectManagerProcess {
          +bool init()
          +bool set_config(BasicObjectManagerProcessConfig config)
          +bool update(double current_time_sec)
	  +string pretty()
          -BasicObjectManagerProcessConfig config_
        }
        BasicObjectManagerProcess -up-|> BaseObjectManagerProcess
        BasicObjectManagerProcess *-> BasicObjectManagerProcessConfig: <<use>>
        class DummyObjectManagerProcess {
          +bool update(double current_time_sec)
        }
        DummyObjectManagerProcess -up-|> BaseObjectManagerProcess
      }
    }
  }
}
@enduml
